# distributed-drone-patrolling

./: README.md
code-main/: .gitignore  README.md  build.sh  check_ros.sh  ros-project-setup.sh  start
code-main/gazebo_resources/: iot_project_world.sdf  iot_project_world.sdf_instance  target_obj_blue.sdf  target_obj_green.sdf  target_obj_red.sdf  x3.sdf  x3_blue.dae  x3_red.dae
code-main/sim_files/: face_the_wind.sim  fair_simulation.sim  final_stage.sim  sim1.sim  sim10.sim  sim11.sim  sim12.sim  sim13.sim  sim14.sim  sim15.sim  sim2.sim  sim3.sim  sim4.sim  sim5.sim  sim6.sim  sim7.sim  sim8.sim  sim9.sim  sim_19_evil.sim  sim_20_zero.sim  simple_simulation.sim  single_drone_good_topology.sim  stage11.sim  stage12.sim  stage13.sim  stage21.sim  stage22.sim  stage23.sim  stage31.sim  tornado_drone.sim  unfair_simulation.sim  windy_simulation.sim
code-main/src/iot_project/: package.xml  setup.cfg  setup.py
code-main/src/iot_project/iot_project/: sim_utils.py
code-main/src/iot_project/launch/: launch.py
code-main/src/iot_project_animator/: CMakeLists.txt  package.xml
code-main/src/iot_project_animator/src/: color_changer.cpp
code-main/src/iot_project_grader/: package.xml  setup.cfg  setup.py
code-main/src/iot_project_grader/iot_project_grader/: grade_display.py
code-main/src/iot_project_interfaces/: CMakeLists.txt  package.xml
code-main/src/iot_project_interfaces/msg/: TargetPositions.msg
code-main/src/iot_project_manager/: package.xml  setup.cfg  setup.py
code-main/src/iot_project_solution_interfaces/: CMakeLists.txt  package.xml
code-main/src/iot_project_solution_interfaces/action/: PatrollingAction.action
code-main/src/iot_project_solution_src/: package.xml  setup.cfg  setup.py
software-install-uninstall/: gazebo-install.sh  gazebo-uninstall.sh  ros-humble-install.sh  ros-humble-uninstall.sh  ros-project-setup.sh
(+9 files in other folders)
