<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iot_project_animator</name>
  <version>1.0.0</version>
  <description>IoT Project Animator. Advertises a service which allows to change the color of the targets in the simulation</description>
  <maintainer email="trombetti@di.uniroma1.it">fede3751</maintainer>
  <license>Apache 2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ignition</depend>
  <depend>iot_project_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
