<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iot_project_solution_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for the solution of the iot_project</description>
  <maintainer email="your_email@studenti.uniroma1.it">your_id</maintainer>
  <license>Your license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
